syntax = "proto3";

package tasks;

option go_package = "tasks/protogen/golang";


service Tasks {
    rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
    rpc UpdateTaskStatus(UpdateTaskRequest) returns (UpdateTaskResponse);
  }

message GetTasksRequest {
    uint64 limit = 1;
    uint64 offset = 2;
}

message GetTasksResponse {
    repeated Task tasks = 1;
}

message Task {
    string task_id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string created_at = 5;
    string updated_at = 6;
}

message UpdateTaskRequest {
    string task_id = 1;
    string status = 2;
}

message UpdateTaskResponse {
    string message = 1;
}